2009.06.23: David Nichols
	* always check current directory of script first when looking for
	  %include files i the path is not absolute
	* fixed a deadlock when an object deletes a member and the member
	  tries to access the parent object in the member's destructor

2009.06.22: David Nichols
	* added checks to the scanner to give better error messages when
	  trying to include a directory or other non-file

*** v0.7.3 RELEASE *** 

2009.06.08: David Nichols
	* added new HTTPClient methods for manipulating the TCP_NODELAY
	  setting:
	  + HTTPClient::setNoDelay()
   	  + HTTPClient::getNoDelay()
	* now the XmlRpcClient and JsonRpcClient constructors accept an
	  optional second argument that, when True, will inhibit the immediate
	  connection attempt on the socket and instead allow the socket
	  connections to be either manually established or established on
	  demand with the first request

2009.06.04: David Nichols
	* fixed %= with a modula operand of 0 to set the lvalue to 0

2009.06.01: David Nichols
	* fixed exception strings when datasource modules cannot be loaded

2009.05.12: David Nichols
	* fixed localtime() and no argument to return the current date and
	  time as documented
	* implemented now_ms() to return the current date and time to the
	  millisecond resolution

2009.05.11: David Nichols
	* fixed XML-RPC serialization to serialize integers outside the 
	  allowed 32-bit data range as <string> instead of <i4>

2009.05.08: David Nichols
	* fixed a race condition that could cause a deadlock when calling
	  pthread_join() when Qore code calls "exit()" when multiple threads
	  are running
	* implemented the following new Socket methods:
	  + Socket::isWriteFinished(<timeout_ms>): for non-blocking writes
	  + Socket::setNoDelay(<boolean>): to set TCP_NODELAY
	  + Socket::getNoDelay(): returns value of TCP_NODELAY

2009.05.07: David Nichols
	* fixed signal handling after a fork(), was completely disabled due to
	  a bug in the signal manager class