@@ -1,4 +1,3 @@
-%define module_api 0.5
 %define module_dir %{_libdir}/qore-modules
 
 %if 0%{?sles_version}
@@ -86,7 +85,9 @@ character encoding (including proper UTF-8) support, and much more.
 %package -n libqore5
 Summary: The libraries for qore runtime and qore clients
 Group: Development/Languages
-Provides: qore-module-api-%{module_api}
+Provides: qore-module-api-0.7
+Provides: qore-module-api-0.6
+Provides: qore-module-api-0.5
 
 %description -n libqore5
 Qore is a modular, multithreaded, weakly-typed, object-oriented programming
